--- a/package.json
+++ b/package.json
@@ -16,27 +16,28 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@supabase/supabase-js": "^2.45.6",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.4",
+    "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "15.2.0",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-query": "^3.39.3",
     "toastify-react-native": "^5.0.2",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
