--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.4",
+    "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
@@ -32,8 +34,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-query": "^3.39.3",
     "toastify-react-native": "^5.0.2",
-    "zustand": "^5.0.0",
-    "expo-linear-gradient": "~14.0.1"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
