--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.4",
     "expo-linear-gradient": "~14.0.1",
+    "expo-sensors": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
